fix img flicker
-add react-svg
-change penguin images for inline svgs
-use react-svg to parse the files

--- a/src/components/LectureScreen/Styles/LectureScreen.scss
+++ b/src/components/LectureScreen/Styles/LectureScreen.scss
@@ -319,7 +319,7 @@
                             //     // --smart-study-stripe-w: 20px;
                             //     --smart-study-stripe-speed: 0.5s;
                             // }
-                            img {
+                            .smartStudyIcon {
                                 transform: scale(1.25) rotateZ(3deg);
                             }
                         }
